--- a/src/app/_components/home-page/_components/faq/faq.html
+++ b/src/app/_components/home-page/_components/faq/faq.html
@@ -12,7 +12,7 @@
             </div>
           </div>
           <div class="faq-list_item__body" #questionAnswer [ngStyle]="{ 'height': faq.isExpanded ? faq.contentHeight + 'px' : '0' }">
-            <div class="p-3 xlg:p-4 pt-0">{{ faq.body }}</div>
+            <div class="p-3 xlg:pt-0 xlg:p-4 pt-0">{{ faq.body }}</div>
           </div>
         </div>
       }
