--- a/src/app/_components/utilities/tooltip/tooltip.scss
+++ b/src/app/_components/utilities/tooltip/tooltip.scss
@@ -14,7 +14,7 @@
   font-weight: 600;
   white-space: nowrap;
   z-index: 1000;
-
+  color: var(--p-primary-900);
   // Początkowo niewidoczny
   opacity: 0;
   visibility: hidden;
