--- a/src/app/_components/offer-new/_components/offer-order/offer-order.scss
+++ b/src/app/_components/offer-new/_components/offer-order/offer-order.scss
@@ -90,6 +90,8 @@
     & > div {
       background: var(--color-black-50);
       border-radius: var(--border-radius-base);
+      position: sticky;
+      top: 160px;
       @include mixins.media-query('max', 'xl') {
         border-radius:0;
       }
@@ -145,12 +147,15 @@
       }
 
       .right_img {
-        max-height: 276px;
+        max-width: 85px;
+        border: 1px solid var(--color-black-100);
+        border-radius: 8px;
+        overflow: hidden;
         @include mixins.media-query('max', 'xl') {
           max-height: unset;
         }
         img {
-          display: block;
+          display: inline-block;
           max-width: 100%;
         }
       }
