--- a/src/app/_components/home-page/_components/why-us/why-us.html
+++ b/src/app/_components/home-page/_components/why-us/why-us.html
@@ -160,7 +160,7 @@
     <div class="grid mt-0">
       <div class="col-12 xlg:col-8">
         <div>
-          <h2>Spełniamy Wasze <br> motoryzacyjne marzenia!</h2>
+          <h2>Spełniamy Wasze <br> moto marzenia!</h2>
           <span>Z Flexmile zyskujesz dostęp do najnowszych modeli bez długich zobowiązań <br>i formalności. Wybierz auto, które pasuje do Ciebie — komfortowo, szybko i na <br> własnych zasadach.</span>
           <div>
             <flexmile-button label="Sprawdź ofertę" iconPosition="right" icon="pi-arrow-right"
