--- a/src/app/_components/offer-new/_components/offer-order/offer-order.scss
+++ b/src/app/_components/offer-new/_components/offer-order/offer-order.scss
@@ -86,6 +86,7 @@
     width: 100%;
     @include mixins.media-query('max', 'xl') {
       max-width: unset;
+      min-width: unset;
     }
     & > div {
       background: var(--color-black-50);
