--- a/src/app/_components/offer-new/_components/offer-details/offer-details.html
+++ b/src/app/_components/offer-new/_components/offer-details/offer-details.html
@@ -74,7 +74,9 @@
             }
           </div>
           <div class="offer__body-gallery">
-            <flexmile-offer-gallery [gallery]="details().gallery!" [hideControls]="true" [carBrand]="details().brand.name" [carModel]="details().model"></flexmile-offer-gallery>
+            <flexmile-offer-gallery [gallery]="details().gallery!" [hideControls]="true"
+                                    [carBrand]="details().brand.name"
+                                    [carModel]="details().model"></flexmile-offer-gallery>
           </div>
         </div>
         <div class="offer__body-form">
@@ -106,7 +108,8 @@
                 </div>
               </div>
               <div class="offer__body-form-price">
-                <div class="p xlg:pb-5 pb-4">{{ offerService.calculatedPrice | number:'1.0-0' }} PLN <span>/netto mies.</span>
+                <div class="p xlg:pb-5 pb-4">{{ offerService.calculatedPrice | number:'1.0-0' }} PLN
+                  <span>/netto mies.</span>
                 </div>
                 <div class="b">
                   <flexmile-button [disabled]="!canOrder()" [btnClass]="'w-full'"
@@ -124,7 +127,7 @@
     </div>
   </div>
 </div>
-<div class="offer--info">
+<div class="offer--info" #offerInfoSection>
   <div class="container">
     <div class="offer--info-container pb-7">
       <div class="technicals xlg:pt-7 pt-4 xlg:pb-5 pb-4">
@@ -134,24 +137,41 @@
         <div class="technicals-info">
           @for (spec of technicalsArray; track spec.value) {
             <div>
-              <span class="block">{{ spec.label | nullsafe: null : "" : "bd." }}</span>
-              @if (spec.value === 'specs.transmission') {
-                <b
-                  class="block"> {{ getTransmissionLabel(details().specs.transmission) | nullsafe: null : "" : "bd." }}</b>
-              } @else if (spec.value === 'fuel_type') {
-                <b class="block"> {{ getFuelLabel(details().fuel_type) | nullsafe: null : "" : "bd." }}</b>
-              } @else if (spec.value === 'specs.drivetrain') {
-                <b class="block"> {{ details().specs.drivetrain | nullsafe: null : "" : "bd." }}</b>
-              } @else if (spec.value === 'body_type') {
-                <b class="block"> {{ getBodyTypeLabel(details().body_type) | nullsafe: null : "" : "bd." }}</b>
+              <span class="block">
+                @if (spec.value === 'specs.condition' && details().specs.condition !== 'new') {
+                  {{ getConditionLabel(details().specs.condition) }}
+                } @else {
+                  {{ spec.label | nullsafe: null : "" : "bd." }}
+                }
+              </span>
+
+              @if (spec.value === 'specs.condition' && details().specs.condition !== 'new') {
+                <b class="block">{{ getSpecValue('specs.mileage')  | number:'1.0-0' | nullsafe: null : "" : "bd." }}km
+                </b>
               } @else {
-                <b
-                  class="block">{{ getSpecValue(spec.value) | nullsafe: null : "" : "bd." }} @if (spec.value === 'specs.horsepower') {
-                  KM
-                }</b>
+                @if (spec.value === 'specs.transmission') {
+                  <b
+                    class="block"> {{ getTransmissionLabel(details().specs.transmission) | nullsafe: null : "" : "bd." }}</b>
+                } @else if (spec.value === 'fuel_type') {
+                  <b class="block"> {{ getFuelLabel(details().fuel_type) | nullsafe: null : "" : "bd." }}</b>
+                } @else if (spec.value === 'specs.drivetrain') {
+                  <b class="block"> {{ details().specs.drivetrain | nullsafe: null : "" : "bd." }}</b>
+                } @else if (spec.value === 'body_type') {
+                  <b class="block"> {{ getBodyTypeLabel(details().body_type) | nullsafe: null : "" : "bd." }}</b>
+                } @else if (spec.value === 'specs.condition') {
+                  <b class="block"> {{ getConditionLabel(details().specs.condition) | nullsafe: null : "" : "bd." }}</b>
+                } @else {
+                  <b
+                    class="block">{{ getSpecValue(spec.value) | nullsafe: null : "" : "bd." }}
+                    @if (spec.value === 'specs.horsepower') {
+                      KM
+                    }
+                    @if (spec.value === 'specs.co2_emission') {
+                      g/km
+                    }
+                  </b>
+                }
               }
-
-
             </div>
           }
         </div>
@@ -229,5 +249,16 @@
     }
   </div>
 </div>
+
+
+@if (screen.isMobile() && isOfferInfoAtTop) {
+  <div class="mobile-button-wrapper p-4" @slideUpDown>
+    <flexmile-button [disabled]="!canOrder()" [btnClass]="'w-full'"
+                     [label]="details().attributes.coming_soon ? 'Zarezerwuj' : 'Zamów'"
+                     iconPosition="right"
+                     icon="pi-arrow-right"
+                     size="large" (click)="onOrderClick()"></flexmile-button>
+  </div>
+}
 
 
