--- a/src/app/_components/offer-new/_components/offer-details/offer-details.scss
+++ b/src/app/_components/offer-new/_components/offer-details/offer-details.scss
@@ -17,6 +17,7 @@
 
     span {
       color: var(--color-black-700);
+      @include mixins.fontSize(16);
       @include mixins.media-query('max', 'xlg') {
         @include mixins.fontSize(14, 24);
       }
