--- a/src/app/_components/offer-new/_components/offer-order/offer-order.html
+++ b/src/app/_components/offer-new/_components/offer-order/offer-order.html
@@ -160,7 +160,7 @@
           <div class="right_id pb-2">
             {{ details().car_reference_id }}
           </div>
-          <div class="pb-4 flex justify-content-between align-items-end">
+          <div class="pb-4 flex justify-content-start align-items-end">
             <div class="right_img mr-4">
               @if (details().gallery.length) {
                 <img src="{{details().gallery[0].large}}" alt="{{ details().brand.name }} {{ details().model }}">
