--- a/src/app/_components/utilities/header/header.html
+++ b/src/app/_components/utilities/header/header.html
@@ -56,7 +56,7 @@
         </li>
       }
       <li>
-        <a href="#" class="social flex align-items-center justify-content-center">
+        <a href="https://www.facebook.com/profile.php?id=61584429827699&mibextid=wwXIfr&rdid=Qro2BGPjh2hQWhmw" class="social flex align-items-center justify-content-center">
           <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none" class="block">
             <rect x="1" y="1" width="30" height="30" rx="15" stroke="#C1D342" stroke-width="2"/>
             <path
