--- a/src/app/_components/home-page/home-page.html
+++ b/src/app/_components/home-page/home-page.html
@@ -42,7 +42,7 @@
         Nie trać czasu na formalności czy dojazdy. Z Flexmile wszystko załatwisz online, a samochód odbierzesz tam, gdzie Ci najwygodniej. Współpracujemy z siecią sprawdzonych salonów w całej Polsce, ale jeśli wolisz pełną wygodę – przywieziemy auto pod dom. Bez dodatkowych kosztów, bez stresu, gotowe do jazdy od pierwszej minuty.
       </span>
           <div>
-            <flexmile-button label="Sprawdź ofertę" iconPosition="right" icon="pi-arrow-right"
+            <flexmile-button (clicked)="goToOffer()" label="Sprawdź ofertę" iconPosition="right" icon="pi-arrow-right"
                              btnClass="mr-0 xlg:mr-3 w-full xlg:w-auto"></flexmile-button>
           </div>
         </div>
