--- a/src/app/_components/utilities/car/car.scss
+++ b/src/app/_components/utilities/car/car.scss
@@ -226,6 +226,7 @@
     gap: 3px;
     display: inline-flex;
     width: auto;
+    min-height: 57px;
     @include mixins.media-query('max', 'xlg') {
       width: auto;
       cursor: pointer;
@@ -363,7 +364,9 @@
         justify-content: flex-start;
         gap: 16px;
         margin-bottom: 24px;
-
+        & > div{
+          width: 30px;
+        }
         span {
           @include mixins.fontSize(16, 24);
           font-weight: 500;
